# base-mlops-ds

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-build.yml
dags/: pytorch_mlops_pipeline.py  yolo_mlops_pipeline.py
dags/scripts/: base_ingestion.py  image_version.txt  pytorch_ingestion.py  trigger.py  yolo_ingestion.py
ml/: Dockerfile  pyproject.toml  setup_directory.sh
ml/config/: detection_yolov8_config.yaml
ml/src/: main.py
ml/src/core/: config_parser.py  factory.py
ml/src/data/: base_data_builder.py  pytorch_data_builder.py  yolo_data_builder.py
ml/src/tracking/: base_tracker.py  local_tracker.py  picsellia_tracker.py
ml/src/training/: base_trainer.py  pytorch_trainer.py  yolo_trainer.py
ml/tests/: test_config_parser.py  test_factory.py
